src/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-lb
  annotations:
    linkerd.io/inject: enabled
