src/client-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-http-services
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30307
      targetPort: client-http
  selector:
    app: client-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-http
spec:
  selector:
    matchLabels:
      app: client-http
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: client-http
    spec:
      containers:
        - name: client-http
          image: client-http-example
