src/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-http-services
spec:
  type: NodePort
  ports:
    - port: 80
#      nodePort: 30300
      targetPort: 80
  selector:
    app: api-server
---
apiVersion: v1
kind: Service
metadata:
  name: api-server-grpc-services
spec:
  type: NodePort
  ports:
    - port: 30051
#      nodePort: 30301
      targetPort: 30051
  selector:
    app: api-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: api-server-example

#      args:
#        - server
#      env:
#        - name: PROJECT_ENV
#          value: local
#        - name: PROJECT_VER
#          value: xbb
#        - name: PROJECT_API
#          value: external
#        - name: PROJECT_SITE
#          value: control
